# dataclaw

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
dataclaw/: __init__.py  anonymizer.py  cli.py  config.py  parser.py  secrets.py
docs/: SKILL.md
tests/: conftest.py  test_anonymizer.py  test_cli.py  test_config.py  test_parser.py  test_secrets.py
